# energy_balance_evaluation

./: .gitignore  README.md  pixi.toml  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
definitions/variable/: electricity-generation.yaml  energy-consumption.yaml  tag_electricity-generation-source.yaml  tag_ets.yaml  tag_final_energy_carrier.yaml  tag_sector.yaml  tag_species.yaml  trade.yaml  variables.yaml
energy_balance_evaluation/: __init__.py  _helpers.py  eb_evaluation_to_iamc.ipynb  energy_balance_eval.py  pypsa_network_eval.py  statics.py  utils.py  variable_structures.py
tests/: conftest.py  run_tests.py  test_basics.py  test_energy_balance.py  test_helpers.py  test_imports.py  test_integration.py  test_statics.py  test_utils.py  test_variable_structures.py
validate_data/: final_energy_2020.yaml
